nc-press-chotatsu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nc-press-chotatsu
  labels:
    name: nc-press-chotatsu
