nc-press-chotatsu/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nc-press-chotatsu-frontend
  namespace: nc-press-chotatsu
  labels:
    app: nc-press-chotatsu-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nc-press-chotatsu-frontend
