nc-press-chotatsu/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nc-press-chotatsu-external
  namespace: nc-press-chotatsu
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - nc-chotatsu.shion1305.com
  rules:
    - backendRefs:
        - name: nc-press-chotatsu-frontend
          port: 3000
